# NebulaOS1.1

./: .gitignore  LICENSE  README.md  build.sh
.github/workflows/: build-iso.yml
ai-assistant/: nebula-ai.desktop  nebula_ai.py
apps/app-store/: nebula-store.desktop  nebula-store.py
apps/settings/: nebula-settings.desktop  nebula-settings.py
apps/welcome/: welcome.py
build-system/: config.sh  nebula-session.service  packages.list  sysctl.conf
desktop/shell/: CMakeLists.txt
desktop/shell/qml/: Main.qml  qml.qrc
desktop/shell/qml/components/: AppIcon.qml  GlassBackground.qml  NebulaButton.qml  NotificationCenter.qml  QuickSettings.qml  SearchPanel.qml  StartMenu.qml  Taskbar.qml  WidgetsPanel.qml
desktop/shell/qml/panels/: DesktopView.qml  LockScreen.qml
desktop/shell/src/: main.cpp  notificationserver.cpp  notificationserver.h  powercontroller.cpp  powercontroller.h  searchprovider.cpp  searchprovider.h  settingsmanager.cpp  settingsmanager.h  shellcontroller.cpp  shellcontroller.h  themeengine.cpp  themeengine.h  virtualdesktopmanager.cpp  virtualdesktopmanager.h  windowmanager.cpp  windowmanager.h
docs/: CONTRIBUTING.md  build-guide.md  installer-guide.md  vm-setup.md
installer/calamares/: settings.conf
installer/calamares/branding/nebulaos/: branding.desc
installer/calamares/modules/: bootloader.conf  partition.conf  users.conf  welcome.conf
kernel/: kernel-config.md
scripts/: run-virtualbox.sh  run-vmware.sh
themes/dark/: theme.json
themes/light/: theme.json
themes/nebula-blue/: theme.json
themes/nebula-neon/: theme.json
